Changes spacing on pages and fixed error with course loading

--- a/src/app/course/course-practice/course-practice.component.scss
+++ b/src/app/course/course-practice/course-practice.component.scss
@@ -53,5 +53,16 @@
 
 .button-box{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     margin: 2rem;
+    gap: 1rem;
+}
+
+.button{
+    margin: 1rem;
+}
+
+.message{
+    margin: 1rem;
 }
