--- a/src/app/course/course.component.scss
+++ b/src/app/course/course.component.scss
@@ -1,5 +1,5 @@
 .course-banner {
-    padding: 0.75rem;
+    padding: 1rem;
     height: calc(3 * var(--tui-padding-l));
     background-color: var(--tui-secondary-active);
 }
